--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* background-image: linear-gradient(#e4efe9 , #93a5cf  );  !Bright background  */
+  background-image: linear-gradient(#868f96  , #414547);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'Comic Sans MS'
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  text-align: center;
+}
+
+#root {
+  display:flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.items  {
+  border: 0.2rem solid rgba(0, 0, 0, 0.244);
+  margin: 3rem;
+  height: 17rem;
+  width: 20rem;
+}
+
+#root > .items {
+  text-align: center;
+}
+
+.items:hover {
+  transform: scale(1.2);
+  border: 0.2rem solid rgba(0, 0, 0, 0.644);
+}
+
+img {
+  width: 7.5rem;
+  height: 7.5rem;
 }
