--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ h1 {
 .items:hover {
   transform: scale(1.2);
   border: 0.2rem solid rgba(0, 0, 0, 0.644);
+  background-color:#575d60;
 }
 
 img {
