--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@ body {
   /* background-image: linear-gradient(#e4efe9 , #93a5cf  );  !Bright background  */
   background-image: linear-gradient(#868f96  , #414547);
   background-repeat: no-repeat;
-  background-size: cover;
-  font-family: 'Comic Sans MS'
+  background-size: fill;
+  font-family: 'Comic Sans MS';
 }
 
 h1 {
@@ -19,6 +19,7 @@ h1 {
 
 .items  {
   border: 0.2rem solid rgba(0, 0, 0, 0.244);
+  border-radius: 20px;
   margin: 3rem;
   height: 17rem;
   width: 20rem;
@@ -32,6 +33,11 @@ h1 {
   transform: scale(1.2);
   border: 0.2rem solid rgba(0, 0, 0, 0.644);
   background-color:#575d60;
+  cursor: pointer;
+}
+
+.singlitem {
+  text-align: center;
 }
 
 img {
