--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ h1 {
 }
 #logo{
   padding: 20px;
-  background-color: lightgray;
   border-radius: 10px;
 }
 
@@ -27,17 +26,18 @@ button{
   padding: 0;
   border: none;
   background: none;
-  color: white;
-  background-color: black;
+  color: black;
+  background-color: lightgray;
   padding: 10px;
   border-radius: 5px;
+  cursor: pointer;
 
 }
 
 button:hover{
-  transform: scale(1.2);
-  background-color: lightgray;
-  color: black;
+  transform: scale(1.05);
+  background-color: black;
+  color: white;
 }
 button:active{
   transform: scale(1);
